# learning_cmake

./: .gitignore  CMakeLists.txt  CMakeLists.txt.copy  README.md  note.md  test.py
another_example_subdir/: CMakeLists.txt  README.md  main.cpp
another_example_subdir/subdir1/: CMakeLists.txt
another_example_subdir/subdir1/include/subdir1/: lib1.h
another_example_subdir/subdir1/src/: lib1.cpp
api/: api.cpp
code/: CMakeLists.txt  config.h.in  main.cpp  square.cpp
code/my_extra_lib/: CMakeLists.txt  my_extra_lib.cpp  my_extra_lib.h
code/my_func/: CMakeLists.txt  my_func.cpp  my_func.h
code/my_math/: CMakeLists.txt  my_math.cpp  my_math.h
how_to_compile/: README.md  main.cpp  remove.py  test.cpp  test.h
library_HOWTO/: README.md  compile_dynamic.sh  compile_static.sh  main.c
library_HOWTO/src/: func.c
src/: config.h.in  main.cpp
src/my_greet/: CMakeLists.txt  my_greet.cpp  my_greet.h
src/my_math/: CMakeLists.txt  my_math.cpp  my_math.h
src/person/: CMakeLists.txt  person.cpp  person.h
